<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shift"
            type="net.wetfish.playasoftvolunteers.data.model.Shift" />

        <variable
            name="clickListener"
            type="net.wetfish.playasoftvolunteers.ui.shifts.ShiftListListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="@{() -> clickListener.onClick(shift)}"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="@string/hint_shift_user_info_title" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_shift_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:shiftDisplayName="@{shift}"
                        tools:text="@string/hint_shift_user_display_name" />

                    <TextView
                        android:id="@+id/tv_shift_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_shift_display_name"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:shiftFullName="@{shift}"
                        tools:text="@string/hint_shift_user_full_name" />

                    <TextView
                        android:id="@+id/tv_shift_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_shift_full_name"
                        android:gravity="center"
                        android:lines="1"
                        app:shiftStartDate="@{shift}"
                        tools:text="@string/hint_shift_start_date" />

                    <TextView
                        android:id="@+id/tv_shift_date_divider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_shift_full_name"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:layout_toEndOf="@+id/tv_shift_start_date"
                        android:gravity="center"
                        android:lines="1"
                        tools:text="@string/shift_date_divider" />

                    <TextView
                        android:id="@+id/tv_shift_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_shift_full_name"
                        android:layout_toEndOf="@id/tv_shift_date_divider"
                        android:gravity="center"
                        android:lines="1"
                        app:shiftEndDate="@{shift}"
                        tools:text="@string/hint_shift_end_date" />

                    <TextView
                        android:id="@+id/tv_shift_start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_shift_start_date"
                        android:layout_alignStart="@+id/tv_shift_start_date"
                        android:layout_alignEnd="@+id/tv_shift_start_date"
                        android:gravity="center"
                        android:lines="1"
                        app:shiftStartTime="@{shift}"
                        tools:text="@string/hint_shift_start_time" />

                    <TextView
                        android:id="@+id/tv_shift_time_divider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_shift_date_divider"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:layout_toEndOf="@+id/tv_shift_start_date"
                        android:gravity="center"
                        android:lines="1"
                        tools:text="@string/shift_date_divider" />

                    <TextView
                        android:id="@+id/tv_shift_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_shift_end_date"
                        android:layout_alignStart="@+id/tv_shift_end_date"
                        android:layout_alignEnd="@+id/tv_shift_end_date"
                        android:layout_toEndOf="@+id/tv_shift_time_divider"
                        android:gravity="center"
                        android:lines="1"
                        app:shiftEndTime="@{shift}"
                        tools:text="@string/hint_shift_end_time" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_shiftPerformanceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_shift_end_date"
                    android:gravity="center"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    tools:text="@string/hint_shift_performance_title" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/s_performance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.appcompat.widget.AppCompatSpinner>

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center">

                </ImageView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
